k8s/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: payment-platform
  labels:
    name: payment-platform
    environment: dev
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
